--- a/app/views/pages/catalogo/section_1.19.html
+++ b/app/views/pages/catalogo/section_1.19.html
@@ -1,17 +1,186 @@
-<div xmlns="http://www.w3.org/1999/xhtml" class="container"><div class="row"><div class="col-sm-3"><div id="facets" class="facets sidenav"><div class="top-panel-heading panel-heading"><button type="button" class="facets-toggle" data-toggle="collapse" data-target="#facet-panel-collapse"><span class="sr-only">Toggle table of contents</span><span class="glyphicon glyphicon-menu-hamburger"/></button><h2 class="facets-heading hidden-sm hidden-md hidden-lg">
+<div xmlns="http://www.w3.org/1999/xhtml" class="container">
+   <div class="row">
+      <div class="col-sm-3">
+         <div id="facets" class="facets sidenav">
+            <div class="top-panel-heading panel-heading">
+               <button type="button"
+                       class="facets-toggle"
+                       data-toggle="collapse"
+                       data-target="#facet-panel-collapse">
+                  <span class="sr-only">Toggle table of contents</span>
+                  <span class="glyphicon glyphicon-menu-hamburger"/>
+               </button>
+               <h2 class="facets-heading hidden-sm hidden-md hidden-lg">
                                   Table of Contents
-                                </h2></div><div id="facet-panel-collapse" class="collapse panel-group" data-spy="affix" data-offset-top="120"><ol class="toc"><li><a href="/catalogo/section_1.1">Delle belle arti in generale</a></li><li><a href="/catalogo/section_1.2">Della Pittura Trattati</a></li><li><a href="/catalogo/section_1.3">Dell’intaglio in Rame e in Legno</a></li><li><a href="/catalogo/section_1.4">Della scultura trattati</a></li><li><a href="/catalogo/section_1.5">Elementi proporzioni e anatomia</a></li><li><a href="/catalogo/section_1.6">Della architettura trattati</a></li><li><a href="/catalogo/section_1.7">Architettura teatrale moderna</a></li><li><a href="/catalogo/section_1.8">Architettura teatrale antica</a></li><li><a href="/catalogo/section_1.9">Prospettiva</a></li><li><a href="/catalogo/section_1.10">Edifici di vario genere</a></li><li><a href="/catalogo/section_1.11">Poemetti didascalici sulle arti</a></li><li><a href="/catalogo/section_1.12">Scrittori del bello</a></li><li><a href="/catalogo/section_1.13">Poemi, drammi e autori classici figurati</a></li><li><a href="/catalogo/section_1.14">Favoleggiatori</a></li><li><a href="/catalogo/section_1.15">Lettere pittoriche e antiquarie</a></li><li><a href="/catalogo/section_1.16">Descrizioni relazioni e memorie</a></li><li><a href="/catalogo/section_1.17">Orazioni pittoriche</a></li><li><a href="/catalogo/section_1.18">Feste ingressi, trionfi, spettacoli e funerali</a></li><li class="current">Miscellanee</li><li><a href="/catalogo/section_1.20">Abiti e costumanze antiche e moderne</a></li><li><a href="/catalogo/section_1.21">Emblemi</a></li><li><a href="/catalogo/section_1.22">Mitologia, riti e costumi religiosi di tutti i popoli</a></li><li><a href="/catalogo/section_1.23">Biblie figurate vite istoriate</a></li><li><a href="/catalogo/section_1.24">Dizionari e abecedari</a></li><li><a href="/catalogo/section_1.25">Biografia</a></li><li><a href="/catalogo/section_1.26">Autori di fisonomia</a></li><li><a href="/catalogo/section_2.1">Dell’antichità in genere</a></li><li><a href="/catalogo/section_2.2">Antichitá arabe, egizie, indiche ec.</a></li><li><a href="/catalogo/section_2.3">Antichitá etrusche e italiane avanti i romani</a></li><li><a href="/catalogo/section_2.4">Antichità greche, greco-italiche, ercolanensi.</a></li><li><a href="/catalogo/section_2.5">Numismatica e pietre intagliate</a></li><li><a href="/catalogo/section_2.6">Iscrizioni</a></li><li><a href="/catalogo/section_2.7">Erudizione varia</a></li><li><a href="/catalogo/section_2.8">Grandi musei</a></li><li><a href="/catalogo/section_2.9">Opere di scultura d’ogni genere antiche e moderne illustrate.</a></li><li><a href="/catalogo/section_2.10">Roma antica e moderna.</a></li><li><a href="/catalogo/section_2.11">Vedute di città</a></li><li><a href="/catalogo/section_2.12">Guide e brevi illustrazioni</a></li><li><a href="/catalogo/section_2.13">Guide</a></li><li><a href="/catalogo/section_2.14">Cataloghi</a></li><li><a href="/catalogo/section_2.15">Cataloghi senz’anno</a></li><li><a href="/catalogo/section_2.16">Equitazione</a></li><li><a href="/catalogo/section_2.17">Alcuni libri di bibliografia</a></li><li><a href="/catalogo/section_2.18">Mitologia imagini sacre e costumi religiosi di diversi popoli</a></li><li><a href="/catalogo/section_2.19">Appendice</a></li></ol></div></div></div><div class="col-sm-9"><section class="catalogo-section" id="1.19">
-            <head><h1>Miscellanee</h1></head>
+                                </h2>
+            </div>
+            <div id="facet-panel-collapse"
+                 class="collapse panel-group"
+                 data-spy="affix"
+                 data-offset-top="120">
+               <ol class="toc">
+                  <li>
+                     <a href="/catalogo/section_1.0">Proemio</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.1">Delle belle arti in generale</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.2">Della Pittura Trattati</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.3">Dell’intaglio in Rame e in Legno</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.4">Della scultura trattati</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.5">Elementi proporzioni e anatomia</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.6">Della architettura trattati</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.7">Architettura teatrale moderna</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.8">Architettura teatrale antica</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.9">Prospettiva</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.10">Edifici di vario genere</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.11">Poemetti didascalici sulle arti</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.12">Scrittori del bello</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.13">Poemi, drammi e autori classici figurati</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.14">Favoleggiatori</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.15">Lettere pittoriche e antiquarie</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.16">Descrizioni relazioni e memorie</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.17">Orazioni pittoriche</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.18">Feste ingressi, trionfi, spettacoli e funerali</a>
+                  </li>
+                  <li class="current">Miscellanee</li>
+                  <li>
+                     <a href="/catalogo/section_1.20">Abiti e costumanze antiche e moderne</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.21">Emblemi</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.22">Mitologia, riti e costumi religiosi di tutti i popoli</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.23">Biblie figurate vite istoriate</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.24">Dizionari e abecedari</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.25">Biografia</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_1.26">Autori di fisonomia</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.0">Proemio</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.1">Dell’antichità in genere</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.2">Antichitá arabe, egizie, indiche ec.</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.3">Antichitá etrusche e italiane avanti i romani</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.4">Antichità greche, greco-italiche, ercolanensi.</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.5">Numismatica e pietre intagliate</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.6">Iscrizioni</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.7">Erudizione varia</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.8">Grandi musei</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.9">Opere di scultura d’ogni genere antiche e moderne illustrate.</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.10">Roma antica e moderna.</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.11">Vedute di città</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.12">Guide e brevi illustrazioni</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.13">Guide</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.14">Cataloghi</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.15">Cataloghi senz’anno</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.16">Equitazione</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.17">Alcuni libri di bibliografia</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.18">Mitologia imagini sacre e costumi religiosi di diversi popoli</a>
+                  </li>
+                  <li>
+                     <a href="/catalogo/section_2.19">Appendice</a>
+                  </li>
+               </ol>
+            </div>
+         </div>
+      </div>
+      <div class="col-sm-9">
+         <section class="catalogo-section" id="1.19">
+            <head>
+               <h1>Miscellanee</h1>
+            </head>
             
-               <head><h2>A. Feste e spettacoli</h2></head>
+               <head>
+               <h2>A. Feste e spettacoli</h2>
+            </head>
                <ol class="catalogo-list">
                   <li id="item_1544" class="catalogo-item">
                      <span class="catalogo-item-label">1544.</span>
                      
 	                       
-	                          — <span class="catalogo-title"><a class="catalog-link" href="/catalog/1544">Facciate illuminate e fuochi d’artificio in Roma al palazzo Colonna in
+	                          — <span class="catalogo-title">
+                     <a class="catalog-link" href="/catalog/1544">Facciate illuminate e fuochi d’artificio in Roma al palazzo Colonna in
 	  occasione che presentavansi i tributi dalla corte di Napoli, per la solennità di
-	  S. Pietro</a></span>.
+	  S. Pietro</a>
+                  </span>.
 	                          Tav. 28
 	                       
 	                       
@@ -43,15 +212,19 @@
                </ol>
             
             
-               <head><h2>B. Feste e spettacoli</h2></head>
+               <head>
+               <h2>B. Feste e spettacoli</h2>
+            </head>
                <ol class="catalogo-list">
                   <li id="item_1545" class="catalogo-item">
                      <span class="catalogo-item-label">1545.</span>
                      
 	                       
-                           — <span class="catalogo-title"><a class="catalog-link" href="/catalog/1545">Vedute di città assediate con molte figure ed ornamenti
+                           — <span class="catalogo-title">
+                     <a class="catalog-link" href="/catalog/1545">Vedute di città assediate con molte figure ed ornamenti
 	intagliate la <span class="catalogo-pb" id="page_266">266</span> più parte da Agostino Corvino sui
-	disegni di Paolo Deker</a></span>.
+	disegni di Paolo Deker</a>
+                  </span>.
 	                          Tav. 14
                         
 	
@@ -77,11 +250,18 @@
                </ol>
             
             
-               <head><h2>C. Feste e spettacoli</h2></head>
+               <head>
+               <h2>C. Feste e spettacoli</h2>
+            </head>
                <ol class="catalogo-list">
                   <li id="item_1546" class="catalogo-item">
-                     <span class="catalogo-item-label">1546.</span> — <span class="catalogo-bibl"><span class="catalogo-title"><a class="catalog-link" href="/catalog/1546">Volume con molte stampe fra le quali diversi ingressi e funerali in S.Marco di Ven. per
-      Francesco Viusdomini <span class="catalogo-date">1669</span></a></span>: Per la Princip. Dorotea in <span class="catalogo-pubPlace">Parma</span> <span class="catalogo-date">1750</span>: Monumento in S. Pietro
+                     <span class="catalogo-item-label">1546.</span> — <span class="catalogo-bibl">
+                     <span class="catalogo-title">
+                        <a class="catalog-link" href="/catalog/1546">Volume con molte stampe fra le quali diversi ingressi e funerali in S.Marco di Ven. per
+      Francesco Viusdomini <span class="catalogo-date">1669</span>
+                        </a>
+                     </span>: Per la Princip. Dorotea in <span class="catalogo-pubPlace">Parma</span> 
+                     <span class="catalogo-date">1750</span>: Monumento in S. Pietro
       a Roma di Cl. XI, del Doge Foscari a Venezia ed altri convogli funebri e coronazioni di M.
       Teresa, con molte vedute italiane, spagnuole e francesi, fra le quali 6 di Firenze, 6 di Berlino,
       4 di Londra, 5 di Vienna, 8 di Parigi e ville, 4 di Pietroburgo, 4 di Roterdam, 4 di Udine, 3 di
@@ -91,26 +271,36 @@
       Tre vedute di Copenhague, della piazza di Jo. Ulrich Kraus: Piano del monte Berico a
       Vicenza, 2 vedute, piani e spaccati di S. Giustina in Padova: Prospetto di dieci porti inglesi e
       varie carte di fortificazione marittima, il volume contiene tav. 97.</span>
-      </li>
+               </li>
                </ol>
             
             
                <span class="catalogo-pb" id="page_267">267</span>
-               <head><h2>D. Feste e spettacoli</h2></head>
+               <head>
+               <h2>D. Feste e spettacoli</h2>
+            </head>
                <ol class="catalogo-list">
                   <li id="item_1547" class="catalogo-item">
-                     <span class="catalogo-item-label">1547.</span> — <span class="catalogo-bibl">Volume con molte stampe. <span class="catalogo-title"><a class="catalog-link" href="/catalog/1547">Comincia con 28 spaccati e prospetti di varii palazzi e chiese di
+                     <span class="catalogo-item-label">1547.</span> — <span class="catalogo-bibl">Volume con molte stampe. <span class="catalogo-title">
+                        <a class="catalog-link" href="/catalog/1547">Comincia con 28 spaccati e prospetti di varii palazzi e chiese di
       Roma, 8 vedute di altri pesi d’Europa, 9 vedute d’ingressi, prospetti, funerali e 15 depositi
-      esistenti in Roma nelle varie Chiese e singolarmente in S. Pietro colla rispettiva pianta</a></span>: per
+      esistenti in Roma nelle varie Chiese e singolarmente in S. Pietro colla rispettiva pianta</a>
+                     </span>: per
       Domenico de’ Rossi: e alcune altre carte di simil genere nel complessivo numero di tavole 77.
-      </span></li>
+      </span>
+               </li>
                </ol>
             
             
-               <head><h2>E. Feste, spettacoli e funerali</h2></head>
+               <head>
+               <h2>E. Feste, spettacoli e funerali</h2>
+            </head>
                <ol class="catalogo-list">
                   <li id="item_1548" class="catalogo-item">
-                     <span class="catalogo-item-label">1548.</span> — <span class="catalogo-bibl"><span class="catalogo-title"><a class="catalog-link" href="/catalog/1548">Ritratti di Sommi Pontefici 11</a></span>: Monumenti Sepolcrali dei medesimi 20: Monumento di M.
+                     <span class="catalogo-item-label">1548.</span> — <span class="catalogo-bibl">
+                     <span class="catalogo-title">
+                        <a class="catalog-link" href="/catalog/1548">Ritratti di Sommi Pontefici 11</a>
+                     </span>: Monumenti Sepolcrali dei medesimi 20: Monumento di M.
       Clementina R. d’Inghil. in S. Pietro di Roma 1: Ritratti di dogi veneti procuratori e altri
       sommi personaggi della R. Veneta intagliati da Pitteri, Ciaconi, Volpato, Bartolozzi ed altri
       incisori in diverse dimensioni, fra quali tre in foglio atlantico stampati in Pergamena, 54:
@@ -119,8 +309,12 @@
       Cattedrale di Brescia 4; Consiglio Patriarcale in Udine, facciata di S. Rocco a Venezia,
       prospetto delle 7 chiese in Monselice, consecrazione della chiesa della Salute in Venezia,
       paliotto d’argento dorato innanzi l’altar maggiore in S. Marco 5: in tutto il volume stampe
-      145.</span></li>
+      145.</span>
+               </li>
                </ol>
                
             
-         </section></div></div></div>
+         </section>
+      </div>
+   </div>
+</div>
